# pygame_mechanism_ros2_practice

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
pygame_mechanism_ros2_practice/: Manip2Dof_Pygame.py  main_test.py
pygame_ros2_tools/: Button.py  Key.py  Keys.py  Linkage.py  Point.py  Screen.py
