<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pygame_mechanism_ros2_practice</name>
  <version>0.0.0</version>
  <description>Render planar mechanisms of ROS2 nodes using pygame library</description>
  <maintainer email="matt.robinson10.28.98@gmail.com">matthew</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>python3-pygame</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
